--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "knex": "<0.20.0",
+    "pg": "^7.18.2",
     "sqlite3": "latest",
     "strapi": "3.0.0-beta.19.3",
     "strapi-admin": "3.0.0-beta.19.3",
@@ -22,6 +23,7 @@
     "strapi-plugin-graphql": "3.0.0-beta.19.3",
     "strapi-plugin-upload": "3.0.0-beta.19.3",
     "strapi-plugin-users-permissions": "3.0.0-beta.19.3",
+    "strapi-provider-upload-aws-s3": "^3.0.0-beta.19.3",
     "strapi-utils": "3.0.0-beta.19.3"
   },
   "author": {
